[gd_scene load_steps=10 format=4 uid="uid://ba782djndha7k"]

[ext_resource type="Script" path="res://Code/UI/ui_canvas.gd" id="1_amwc2"]
[ext_resource type="Script" path="res://Code/UI/gameplay.gd" id="2_iqp4r"]
[ext_resource type="Script" path="res://Code/UI/pause_menu.gd" id="3_h1myp"]
[ext_resource type="Script" path="res://Code/UI/result_screen.gd" id="4_0f8vl"]
[ext_resource type="Script" path="res://Code/UI/loading_screen.gd" id="5_6cnba"]
[ext_resource type="Theme" uid="uid://ccmutdk2gfuxo" path="res://Data/UI/main_theme.tres" id="6_cmtl1"]
[ext_resource type="Script" path="res://Code/UI/levels_selector.gd" id="7_gr110"]
[ext_resource type="TileSet" uid="uid://ctb0cwkl7fnqv" path="res://Data/parking_tileset.tres" id="8_nnetg"]
[ext_resource type="PackedScene" uid="uid://d4laau4frxsm0" path="res://Scenes/UI/loading_tire.tscn" id="9_4x14f"]

[node name="UiCanvas" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_amwc2")

[node name="Levels" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
script = ExtResource("7_gr110")
id = "level_selector"

[node name="background" type="TileMapLayer" parent="Levels"]
tile_map_data = PackedByteArray("AAAUAAsAAAACAAUAAAAUAAoAAAABAAQAAAAUAAkAAAAAAAQAAAAUAAgAAAABAAUAAAAUAAcAAAAAAAMAAAAUAAYAAAACAAQAAAAUAAUAAAABAAQAAAAUAAQAAAACAAMAAAAUAAMAAAABAAQAAAAUAAIAAAACAAQAAAAUAAEAAAAAAAMAAAAUAAAAAAABAAMAAAAUAP//AAAAAAUAAAATAAsAAAAAAAQAAAATAAoAAAACAAUAAAATAAkAAAACAAMAAAATAAgAAAABAAQAAAATAAcAAAAAAAQAAAATAAYAAAABAAMAAAATAAUAAAABAAMAAAATAAQAAAABAAQAAAATAAMAAAAAAAUAAAATAAIAAAABAAMAAAATAAEAAAAAAAMAAAATAAAAAAABAAQAAAATAP//AAABAAQAAAASAAsAAAACAAMAAAASAAoAAAACAAUAAAASAAkAAAABAAQAAAASAAgAAAAAAAUAAAASAAcAAAABAAMAAAASAAYAAAAAAAQAAAASAAUAAAABAAQAAAASAAQAAAABAAMAAAASAAMAAAACAAUAAAASAAIAAAACAAQAAAASAAEAAAACAAMAAAASAAAAAAACAAMAAAASAP//AAABAAMAAAARAAsAAAAAAAQAAAARAAoAAAAAAAMAAAARAAkAAAACAAUAAAARAAgAAAACAAMAAAARAAcAAAACAAUAAAARAAYAAAABAAUAAAARAAUAAAACAAMAAAARAAQAAAABAAQAAAARAAMAAAAAAAUAAAARAAIAAAACAAUAAAARAAEAAAACAAQAAAARAAAAAAAAAAQAAAARAP//AAABAAUAAAAQAAsAAAABAAMAAAAQAAoAAAACAAUAAAAQAAkAAAABAAMAAAAQAAgAAAABAAMAAAAQAAcAAAABAAQAAAAQAAYAAAABAAQAAAAQAAUAAAABAAMAAAAQAAQAAAACAAQAAAAQAAMAAAABAAUAAAAQAAIAAAACAAMAAAAQAAEAAAABAAQAAAAQAAAAAAAAAAQAAAAQAP//AAABAAMAAAAPAAsAAAABAAMAAAAPAAoAAAACAAQAAAAPAAkAAAABAAMAAAAPAAgAAAACAAMAAAAPAAcAAAABAAUAAAAPAAYAAAAAAAUAAAAPAAUAAAAAAAMAAAAPAAQAAAAAAAUAAAAPAAMAAAACAAUAAAAPAAIAAAABAAMAAAAPAAEAAAABAAUAAAAPAAAAAAABAAQAAAAPAP//AAACAAQAAAAOAAsAAAAAAAUAAAAOAAoAAAABAAMAAAAOAAkAAAABAAUAAAAOAAgAAAAAAAUAAAAOAAcAAAACAAMAAAAOAAYAAAACAAUAAAAOAAUAAAACAAMAAAAOAAQAAAAAAAQAAAAOAAMAAAACAAQAAAAOAAIAAAABAAUAAAAOAAEAAAACAAUAAAAOAAAAAAACAAUAAAAOAP//AAABAAUAAAANAAsAAAACAAQAAAANAAoAAAAAAAQAAAANAAkAAAAAAAMAAAANAAgAAAAAAAQAAAANAAcAAAACAAUAAAANAAYAAAAAAAQAAAANAAUAAAABAAUAAAANAAQAAAABAAMAAAANAAMAAAABAAQAAAANAAIAAAACAAQAAAANAAEAAAAAAAMAAAANAAAAAAACAAMAAAANAP//AAAAAAUAAAAMAAsAAAAAAAMAAAAMAAoAAAABAAUAAAAMAAkAAAACAAMAAAAMAAgAAAACAAMAAAAMAAcAAAABAAUAAAAMAAYAAAABAAUAAAAMAAUAAAAAAAMAAAAMAAQAAAABAAMAAAAMAAMAAAACAAUAAAAMAAIAAAACAAQAAAAMAAEAAAAAAAUAAAAMAAAAAAABAAQAAAAMAP//AAAAAAMAAAALAAsAAAAAAAQAAAALAAoAAAAAAAMAAAALAAkAAAABAAMAAAALAAgAAAACAAQAAAALAAcAAAABAAQAAAALAAYAAAABAAMAAAALAAUAAAACAAMAAAALAAQAAAAAAAUAAAALAAMAAAACAAMAAAALAAIAAAAAAAQAAAALAAEAAAAAAAQAAAALAAAAAAAAAAUAAAALAP//AAACAAMAAAAKAAsAAAABAAUAAAAKAAoAAAAAAAMAAAAKAAkAAAAAAAUAAAAKAAgAAAABAAMAAAAKAAcAAAACAAUAAAAKAAYAAAACAAQAAAAKAAUAAAABAAMAAAAKAAQAAAABAAUAAAAKAAMAAAAAAAUAAAAKAAIAAAABAAUAAAAKAAEAAAAAAAQAAAAKAAAAAAABAAMAAAAKAP//AAABAAUAAAAJAAsAAAABAAMAAAAJAAoAAAABAAUAAAAJAAkAAAAAAAUAAAAJAAgAAAACAAMAAAAJAAcAAAABAAMAAAAJAAYAAAABAAUAAAAJAAUAAAAAAAQAAAAJAAQAAAACAAUAAAAJAAMAAAAAAAMAAAAJAAIAAAABAAQAAAAJAAEAAAAAAAUAAAAJAAAAAAACAAUAAAAJAP//AAAAAAMAAAAIAAsAAAABAAQAAAAIAAoAAAACAAMAAAAIAAkAAAACAAQAAAAIAAgAAAAAAAUAAAAIAAcAAAACAAQAAAAIAAYAAAABAAMAAAAIAAUAAAACAAUAAAAIAAQAAAACAAUAAAAIAAMAAAACAAQAAAAIAAIAAAABAAUAAAAIAAEAAAABAAQAAAAIAAAAAAABAAMAAAAIAP//AAABAAQAAAAHAAsAAAAAAAUAAAAHAAoAAAACAAQAAAAHAAkAAAAAAAMAAAAHAAgAAAACAAQAAAAHAAcAAAAAAAQAAAAHAAYAAAAAAAUAAAAHAAUAAAACAAMAAAAHAAQAAAACAAQAAAAHAAMAAAABAAUAAAAHAAIAAAAAAAQAAAAHAAEAAAABAAMAAAAHAAAAAAAAAAMAAAAHAP//AAABAAUAAAAGAAsAAAABAAUAAAAGAAoAAAABAAUAAAAGAAkAAAABAAMAAAAGAAgAAAAAAAQAAAAGAAcAAAAAAAUAAAAGAAYAAAACAAQAAAAGAAUAAAAAAAQAAAAGAAQAAAABAAMAAAAGAAMAAAABAAUAAAAGAAIAAAACAAMAAAAGAAEAAAACAAQAAAAGAAAAAAACAAMAAAAGAP//AAAAAAQAAAAFAAsAAAACAAUAAAAFAAoAAAAAAAMAAAAFAAkAAAAAAAQAAAAFAAgAAAAAAAQAAAAFAAcAAAABAAUAAAAFAAYAAAACAAMAAAAFAAUAAAACAAMAAAAFAAQAAAAAAAMAAAAFAAMAAAABAAQAAAAFAAIAAAACAAUAAAAFAAEAAAACAAUAAAAFAAAAAAAAAAUAAAAFAP//AAACAAUAAAAEAAsAAAAAAAQAAAAEAAoAAAABAAMAAAAEAAkAAAACAAQAAAAEAAgAAAABAAUAAAAEAAcAAAABAAQAAAAEAAYAAAABAAQAAAAEAAUAAAAAAAQAAAAEAAQAAAABAAMAAAAEAAMAAAACAAMAAAAEAAIAAAABAAUAAAAEAAEAAAABAAUAAAAEAAAAAAAAAAMAAAAEAP//AAABAAQAAAADAAsAAAAAAAUAAAADAAoAAAAAAAMAAAADAAkAAAABAAQAAAADAAgAAAAAAAUAAAADAAcAAAACAAUAAAADAAYAAAABAAMAAAADAAUAAAABAAMAAAADAAQAAAACAAUAAAADAAMAAAAAAAMAAAADAAIAAAACAAMAAAADAAEAAAACAAQAAAADAAAAAAACAAUAAAADAP//AAACAAQAAAACAAsAAAACAAQAAAACAAoAAAACAAMAAAACAAkAAAABAAMAAAACAAgAAAAAAAUAAAACAAcAAAACAAMAAAACAAYAAAACAAQAAAACAAUAAAAAAAUAAAACAAQAAAABAAQAAAACAAMAAAAAAAQAAAACAAIAAAAAAAMAAAACAAEAAAAAAAQAAAACAAAAAAABAAQAAAACAP//AAACAAUAAAABAAsAAAAAAAUAAAABAAoAAAACAAUAAAABAAkAAAACAAUAAAABAAgAAAACAAUAAAABAAcAAAAAAAMAAAABAAYAAAABAAMAAAABAAUAAAAAAAUAAAABAAQAAAABAAMAAAABAAMAAAACAAMAAAABAAIAAAABAAUAAAABAAEAAAABAAMAAAABAAAAAAAAAAQAAAABAP//AAAAAAMAAAAAAAsAAAACAAMAAAAAAAoAAAACAAMAAAAAAAkAAAACAAQAAAAAAAgAAAABAAUAAAAAAAcAAAABAAQAAAAAAAYAAAABAAUAAAAAAAUAAAABAAQAAAAAAAQAAAAAAAUAAAAAAAMAAAAAAAMAAAAAAAIAAAABAAQAAAAAAAEAAAABAAMAAAAAAAAAAAAAAAQAAAAAAP//AAACAAMAAAD//wsAAAACAAQAAAD//woAAAABAAMAAAD//wkAAAACAAMAAAD//wgAAAAAAAMAAAD//wcAAAACAAQAAAD//wYAAAACAAMAAAD//wUAAAABAAMAAAD//wQAAAACAAUAAAD//wMAAAABAAUAAAD//wIAAAABAAUAAAD//wEAAAACAAUAAAD//wAAAAABAAQAAAD/////AAACAAQAAAA=")
tile_set = ExtResource("8_nnetg")

[node name="level_selector_title" type="RichTextLabel" parent="Levels"]
custom_minimum_size = Vector2(320, 30)
layout_mode = 0
offset_top = 3.0
offset_right = 320.0
offset_bottom = 33.0
theme = ExtResource("6_cmtl1")
bbcode_enabled = true
text = "[center]Select a Level[/center]"
scroll_active = false

[node name="TabContainer" type="TabContainer" parent="Levels"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(200, 140)
layout_mode = 0
offset_left = 60.0
offset_top = 25.0
offset_right = 260.0
offset_bottom = 165.0
theme = ExtResource("6_cmtl1")
tab_alignment = 1

[node name="back" type="Button" parent="Levels"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 272.0
offset_top = 145.0
offset_right = 304.0
offset_bottom = 167.0
theme = ExtResource("6_cmtl1")
text = "Back"

[node name="Gameplay" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_iqp4r")
id = "gameplay_ui"

[node name="level_timer" type="RichTextLabel" parent="Gameplay"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(70, 15)
layout_mode = 0
offset_left = 255.0
offset_top = 5.0
offset_right = 325.0
offset_bottom = 20.0
theme = ExtResource("6_cmtl1")
theme_override_font_sizes/normal_font_size = 10
text = "00:00.000"
scroll_active = false

[node name="PauseMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_h1myp")
id = "pause_menu"

[node name="background" type="TileMapLayer" parent="PauseMenu"]
tile_map_data = PackedByteArray("AAAUAAsAAAABAAMAAAAUAAoAAAABAAMAAAAUAAkAAAAAAAMAAAAUAAgAAAAAAAMAAAAUAAcAAAACAAQAAAAUAAYAAAABAAUAAAAUAAUAAAACAAUAAAAUAAQAAAABAAMAAAAUAAMAAAABAAMAAAAUAAIAAAACAAMAAAAUAAEAAAABAAQAAAAUAAAAAAACAAQAAAAUAP//AAACAAQAAAATAAsAAAAAAAUAAAATAAoAAAACAAQAAAATAAkAAAAAAAQAAAATAAgAAAACAAUAAAATAAcAAAAAAAUAAAATAAYAAAACAAMAAAATAAUAAAABAAQAAAATAAQAAAACAAMAAAATAAMAAAACAAQAAAATAAIAAAABAAMAAAATAAEAAAABAAQAAAATAAAAAAAAAAUAAAATAP//AAABAAUAAAASAAsAAAAAAAMAAAASAAoAAAABAAMAAAASAAkAAAAAAAUAAAASAAgAAAAAAAQAAAASAAcAAAABAAMAAAASAAYAAAACAAUAAAASAAUAAAACAAMAAAASAAQAAAABAAMAAAASAAMAAAAAAAQAAAASAAIAAAAAAAQAAAASAAEAAAABAAUAAAASAAAAAAABAAUAAAASAP//AAAAAAUAAAARAAsAAAAAAAUAAAARAAoAAAABAAUAAAARAAkAAAAAAAQAAAARAAgAAAACAAUAAAARAAcAAAAAAAMAAAARAAYAAAACAAQAAAARAAUAAAACAAMAAAARAAQAAAABAAQAAAARAAMAAAABAAQAAAARAAIAAAABAAMAAAARAAEAAAAAAAQAAAARAAAAAAAAAAUAAAARAP//AAABAAMAAAAQAAsAAAACAAMAAAAQAAoAAAABAAQAAAAQAAkAAAACAAMAAAAQAAgAAAABAAUAAAAQAAcAAAABAAQAAAAQAAYAAAABAAQAAAAQAAUAAAAAAAUAAAAQAAQAAAABAAUAAAAQAAMAAAABAAUAAAAQAAIAAAAAAAUAAAAQAAEAAAACAAUAAAAQAAAAAAACAAUAAAAQAP//AAACAAUAAAAPAAsAAAABAAQAAAAPAAoAAAACAAMAAAAPAAkAAAAAAAUAAAAPAAgAAAAAAAMAAAAPAAcAAAABAAQAAAAPAAYAAAACAAUAAAAPAAUAAAABAAUAAAAPAAQAAAAAAAMAAAAPAAMAAAACAAMAAAAPAAIAAAABAAQAAAAPAAEAAAABAAUAAAAPAAAAAAABAAUAAAAPAP//AAABAAUAAAAOAAsAAAACAAUAAAAOAAoAAAAAAAMAAAAOAAkAAAAAAAQAAAAOAAgAAAAAAAQAAAAOAAcAAAACAAMAAAAOAAYAAAABAAUAAAAOAAUAAAAAAAMAAAAOAAQAAAAAAAUAAAAOAAMAAAAAAAQAAAAOAAIAAAAAAAQAAAAOAAEAAAAAAAMAAAAOAAAAAAACAAQAAAAOAP//AAABAAUAAAANAAsAAAAAAAUAAAANAAoAAAACAAMAAAANAAkAAAACAAQAAAANAAgAAAAAAAMAAAANAAcAAAAAAAQAAAANAAYAAAAAAAMAAAANAAUAAAACAAMAAAANAAQAAAACAAMAAAANAAMAAAAAAAQAAAANAAIAAAAAAAUAAAANAAEAAAABAAUAAAANAAAAAAACAAMAAAANAP//AAACAAMAAAAMAAsAAAACAAUAAAAMAAoAAAACAAUAAAAMAAkAAAABAAQAAAAMAAgAAAAAAAQAAAAMAAcAAAACAAUAAAAMAAYAAAACAAUAAAAMAAUAAAABAAMAAAAMAAQAAAAAAAMAAAAMAAMAAAACAAUAAAAMAAIAAAAAAAQAAAAMAAEAAAABAAUAAAAMAAAAAAABAAMAAAAMAP//AAAAAAQAAAALAAsAAAABAAUAAAALAAoAAAACAAUAAAALAAkAAAABAAMAAAALAAgAAAAAAAUAAAALAAcAAAACAAUAAAALAAYAAAACAAUAAAALAAUAAAACAAQAAAALAAQAAAAAAAMAAAALAAMAAAAAAAUAAAALAAIAAAACAAUAAAALAAEAAAABAAQAAAALAAAAAAABAAUAAAALAP//AAABAAMAAAAKAAsAAAAAAAMAAAAKAAoAAAACAAQAAAAKAAkAAAAAAAQAAAAKAAgAAAACAAUAAAAKAAcAAAABAAQAAAAKAAYAAAAAAAMAAAAKAAUAAAABAAMAAAAKAAQAAAAAAAUAAAAKAAMAAAACAAQAAAAKAAIAAAACAAQAAAAKAAEAAAAAAAQAAAAKAAAAAAABAAUAAAAKAP//AAACAAMAAAAJAAsAAAACAAMAAAAJAAoAAAABAAMAAAAJAAkAAAAAAAMAAAAJAAgAAAABAAUAAAAJAAcAAAACAAQAAAAJAAYAAAABAAUAAAAJAAUAAAABAAUAAAAJAAQAAAABAAQAAAAJAAMAAAAAAAMAAAAJAAIAAAACAAMAAAAJAAEAAAABAAMAAAAJAAAAAAABAAQAAAAJAP//AAACAAMAAAAIAAsAAAABAAMAAAAIAAoAAAACAAMAAAAIAAkAAAABAAUAAAAIAAgAAAAAAAUAAAAIAAcAAAACAAMAAAAIAAYAAAABAAQAAAAIAAUAAAACAAQAAAAIAAQAAAACAAUAAAAIAAMAAAAAAAQAAAAIAAIAAAAAAAUAAAAIAAEAAAABAAQAAAAIAAAAAAAAAAQAAAAIAP//AAAAAAMAAAAHAAsAAAABAAQAAAAHAAoAAAAAAAUAAAAHAAkAAAACAAUAAAAHAAgAAAAAAAMAAAAHAAcAAAABAAQAAAAHAAYAAAABAAUAAAAHAAUAAAACAAQAAAAHAAQAAAAAAAQAAAAHAAMAAAACAAUAAAAHAAIAAAABAAUAAAAHAAEAAAAAAAMAAAAHAAAAAAACAAUAAAAHAP//AAACAAUAAAAGAAsAAAABAAMAAAAGAAoAAAAAAAUAAAAGAAkAAAAAAAUAAAAGAAgAAAABAAUAAAAGAAcAAAACAAUAAAAGAAYAAAACAAUAAAAGAAUAAAACAAQAAAAGAAQAAAABAAQAAAAGAAMAAAAAAAMAAAAGAAIAAAABAAMAAAAGAAEAAAABAAMAAAAGAAAAAAAAAAQAAAAGAP//AAACAAUAAAAFAAsAAAACAAQAAAAFAAoAAAACAAQAAAAFAAkAAAABAAQAAAAFAAgAAAAAAAMAAAAFAAcAAAAAAAUAAAAFAAYAAAACAAQAAAAFAAUAAAABAAQAAAAFAAQAAAABAAQAAAAFAAMAAAABAAUAAAAFAAIAAAAAAAQAAAAFAAEAAAACAAUAAAAFAAAAAAAAAAQAAAAFAP//AAAAAAMAAAAEAAsAAAACAAUAAAAEAAoAAAACAAUAAAAEAAkAAAABAAUAAAAEAAgAAAACAAUAAAAEAAcAAAACAAMAAAAEAAYAAAAAAAUAAAAEAAUAAAACAAUAAAAEAAQAAAABAAMAAAAEAAMAAAABAAMAAAAEAAIAAAABAAUAAAAEAAEAAAACAAMAAAAEAAAAAAAAAAMAAAAEAP//AAABAAUAAAADAAsAAAACAAUAAAADAAoAAAABAAQAAAADAAkAAAAAAAQAAAADAAgAAAACAAQAAAADAAcAAAAAAAUAAAADAAYAAAAAAAQAAAADAAUAAAAAAAUAAAADAAQAAAACAAMAAAADAAMAAAACAAQAAAADAAIAAAAAAAQAAAADAAEAAAAAAAUAAAADAAAAAAABAAQAAAADAP//AAAAAAQAAAACAAsAAAAAAAQAAAACAAoAAAABAAUAAAACAAkAAAAAAAQAAAACAAgAAAABAAUAAAACAAcAAAACAAQAAAACAAYAAAACAAMAAAACAAUAAAAAAAUAAAACAAQAAAAAAAQAAAACAAMAAAABAAMAAAACAAIAAAAAAAMAAAACAAEAAAACAAUAAAACAAAAAAAAAAUAAAACAP//AAAAAAUAAAABAAsAAAACAAUAAAABAAoAAAAAAAQAAAABAAkAAAABAAUAAAABAAgAAAABAAQAAAABAAcAAAACAAQAAAABAAYAAAAAAAUAAAABAAUAAAACAAMAAAABAAQAAAACAAUAAAABAAMAAAACAAUAAAABAAIAAAACAAQAAAABAAEAAAACAAQAAAABAAAAAAABAAMAAAABAP//AAACAAQAAAAAAAsAAAACAAQAAAAAAAoAAAACAAMAAAAAAAkAAAACAAMAAAAAAAgAAAABAAUAAAAAAAcAAAACAAQAAAAAAAYAAAAAAAUAAAAAAAUAAAAAAAMAAAAAAAQAAAABAAMAAAAAAAMAAAABAAQAAAAAAAIAAAABAAUAAAAAAAEAAAAAAAQAAAAAAAAAAAACAAMAAAAAAP//AAABAAUAAAD//wsAAAABAAUAAAD//woAAAAAAAUAAAD//wkAAAAAAAQAAAD//wgAAAACAAQAAAD//wcAAAABAAUAAAD//wYAAAABAAQAAAD//wUAAAABAAUAAAD//wQAAAABAAMAAAD//wMAAAABAAMAAAD//wIAAAABAAUAAAD//wEAAAACAAMAAAD//wAAAAAAAAUAAAD/////AAAAAAMAAAA=")
tile_set = ExtResource("8_nnetg")

[node name="pause_title" type="RichTextLabel" parent="PauseMenu"]
custom_minimum_size = Vector2(320, 25)
layout_mode = 0
offset_top = 21.0
offset_right = 320.0
offset_bottom = 46.0
theme = ExtResource("6_cmtl1")
bbcode_enabled = true
text = "[center]Paused[/center]"
scroll_active = false

[node name="pause_continue" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 247.0
offset_top = 146.0
offset_right = 298.0
offset_bottom = 168.0
theme = ExtResource("6_cmtl1")
text = "Back"

[node name="pause_restart" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 177.0
offset_top = 146.0
offset_right = 244.0
offset_bottom = 168.0
theme = ExtResource("6_cmtl1")
text = "Restart Level"

[node name="pause_exit" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 113.0
offset_top = 146.0
offset_right = 172.0
offset_bottom = 168.0
theme = ExtResource("6_cmtl1")
text = "Main Menu"

[node name="ResultScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_0f8vl")
id = "result_screen"

[node name="background" type="TileMapLayer" parent="ResultScreen"]
tile_map_data = PackedByteArray("AAAUAAsAAAABAAMAAAAUAAoAAAAAAAQAAAAUAAkAAAAAAAUAAAAUAAgAAAAAAAUAAAAUAAcAAAAAAAMAAAAUAAYAAAAAAAMAAAAUAAUAAAACAAUAAAAUAAQAAAAAAAQAAAAUAAMAAAAAAAQAAAAUAAIAAAAAAAUAAAAUAAEAAAACAAMAAAAUAAAAAAABAAMAAAAUAP//AAAAAAQAAAATAAsAAAABAAUAAAATAAoAAAACAAQAAAATAAkAAAABAAUAAAATAAgAAAAAAAMAAAATAAcAAAAAAAQAAAATAAYAAAABAAUAAAATAAUAAAACAAMAAAATAAQAAAACAAUAAAATAAMAAAACAAUAAAATAAIAAAABAAMAAAATAAEAAAAAAAMAAAATAAAAAAACAAQAAAATAP//AAACAAMAAAASAAsAAAAAAAMAAAASAAoAAAACAAQAAAASAAkAAAACAAUAAAASAAgAAAABAAQAAAASAAcAAAABAAQAAAASAAYAAAAAAAQAAAASAAUAAAAAAAMAAAASAAQAAAAAAAMAAAASAAMAAAAAAAMAAAASAAIAAAACAAUAAAASAAEAAAAAAAMAAAASAAAAAAACAAQAAAASAP//AAACAAQAAAARAAsAAAABAAUAAAARAAoAAAACAAQAAAARAAkAAAACAAQAAAARAAgAAAABAAMAAAARAAcAAAABAAUAAAARAAYAAAABAAMAAAARAAUAAAACAAMAAAARAAQAAAACAAQAAAARAAMAAAACAAQAAAARAAIAAAACAAMAAAARAAEAAAACAAUAAAARAAAAAAAAAAQAAAARAP//AAAAAAUAAAAQAAsAAAABAAUAAAAQAAoAAAABAAUAAAAQAAkAAAAAAAUAAAAQAAgAAAACAAUAAAAQAAcAAAACAAQAAAAQAAYAAAABAAUAAAAQAAUAAAAAAAQAAAAQAAQAAAACAAUAAAAQAAMAAAACAAQAAAAQAAIAAAACAAQAAAAQAAEAAAABAAMAAAAQAAAAAAABAAQAAAAQAP//AAAAAAQAAAAPAAsAAAACAAQAAAAPAAoAAAAAAAQAAAAPAAkAAAABAAQAAAAPAAgAAAACAAUAAAAPAAcAAAAAAAMAAAAPAAYAAAACAAUAAAAPAAUAAAABAAMAAAAPAAQAAAACAAUAAAAPAAMAAAABAAUAAAAPAAIAAAACAAUAAAAPAAEAAAABAAMAAAAPAAAAAAACAAQAAAAPAP//AAACAAMAAAAOAAsAAAACAAUAAAAOAAoAAAABAAQAAAAOAAkAAAACAAMAAAAOAAgAAAACAAQAAAAOAAcAAAACAAUAAAAOAAYAAAAAAAMAAAAOAAUAAAABAAMAAAAOAAQAAAACAAUAAAAOAAMAAAAAAAQAAAAOAAIAAAAAAAUAAAAOAAEAAAAAAAQAAAAOAAAAAAABAAQAAAAOAP//AAABAAMAAAANAAsAAAACAAQAAAANAAoAAAAAAAUAAAANAAkAAAABAAQAAAANAAgAAAABAAUAAAANAAcAAAACAAUAAAANAAYAAAAAAAUAAAANAAUAAAACAAUAAAANAAQAAAACAAUAAAANAAMAAAAAAAQAAAANAAIAAAACAAUAAAANAAEAAAABAAQAAAANAAAAAAAAAAUAAAANAP//AAACAAQAAAAMAAsAAAACAAQAAAAMAAoAAAAAAAQAAAAMAAkAAAAAAAQAAAAMAAgAAAAAAAQAAAAMAAcAAAACAAMAAAAMAAYAAAABAAQAAAAMAAUAAAACAAMAAAAMAAQAAAACAAQAAAAMAAMAAAABAAQAAAAMAAIAAAAAAAUAAAAMAAEAAAACAAQAAAAMAAAAAAACAAQAAAAMAP//AAACAAMAAAALAAsAAAACAAMAAAALAAoAAAABAAUAAAALAAkAAAABAAQAAAALAAgAAAAAAAUAAAALAAcAAAACAAUAAAALAAYAAAAAAAMAAAALAAUAAAABAAQAAAALAAQAAAAAAAUAAAALAAMAAAACAAMAAAALAAIAAAAAAAQAAAALAAEAAAABAAUAAAALAAAAAAAAAAUAAAALAP//AAACAAQAAAAKAAsAAAABAAMAAAAKAAoAAAACAAUAAAAKAAkAAAACAAUAAAAKAAgAAAACAAQAAAAKAAcAAAABAAMAAAAKAAYAAAABAAQAAAAKAAUAAAABAAUAAAAKAAQAAAACAAUAAAAKAAMAAAAAAAMAAAAKAAIAAAACAAQAAAAKAAEAAAACAAUAAAAKAAAAAAAAAAMAAAAKAP//AAABAAMAAAAJAAsAAAAAAAMAAAAJAAoAAAAAAAUAAAAJAAkAAAACAAMAAAAJAAgAAAACAAQAAAAJAAcAAAAAAAMAAAAJAAYAAAABAAMAAAAJAAUAAAACAAMAAAAJAAQAAAABAAUAAAAJAAMAAAAAAAUAAAAJAAIAAAABAAQAAAAJAAEAAAABAAQAAAAJAAAAAAABAAUAAAAJAP//AAAAAAMAAAAIAAsAAAABAAQAAAAIAAoAAAACAAQAAAAIAAkAAAACAAMAAAAIAAgAAAAAAAMAAAAIAAcAAAABAAMAAAAIAAYAAAACAAQAAAAIAAUAAAABAAQAAAAIAAQAAAAAAAMAAAAIAAMAAAAAAAUAAAAIAAIAAAAAAAUAAAAIAAEAAAACAAMAAAAIAAAAAAAAAAUAAAAIAP//AAACAAMAAAAHAAsAAAACAAUAAAAHAAoAAAAAAAUAAAAHAAkAAAABAAQAAAAHAAgAAAACAAMAAAAHAAcAAAACAAUAAAAHAAYAAAAAAAUAAAAHAAUAAAAAAAUAAAAHAAQAAAAAAAMAAAAHAAMAAAAAAAMAAAAHAAIAAAACAAUAAAAHAAEAAAABAAUAAAAHAAAAAAABAAUAAAAHAP//AAACAAMAAAAGAAsAAAAAAAMAAAAGAAoAAAAAAAMAAAAGAAkAAAACAAMAAAAGAAgAAAACAAQAAAAGAAcAAAAAAAMAAAAGAAYAAAABAAMAAAAGAAUAAAACAAUAAAAGAAQAAAACAAUAAAAGAAMAAAAAAAMAAAAGAAIAAAACAAUAAAAGAAEAAAABAAQAAAAGAAAAAAAAAAUAAAAGAP//AAAAAAQAAAAFAAsAAAAAAAMAAAAFAAoAAAABAAQAAAAFAAkAAAAAAAQAAAAFAAgAAAABAAQAAAAFAAcAAAABAAUAAAAFAAYAAAABAAMAAAAFAAUAAAACAAUAAAAFAAQAAAAAAAUAAAAFAAMAAAAAAAUAAAAFAAIAAAACAAQAAAAFAAEAAAACAAMAAAAFAAAAAAACAAMAAAAFAP//AAACAAUAAAAEAAsAAAACAAMAAAAEAAoAAAABAAMAAAAEAAkAAAACAAQAAAAEAAgAAAAAAAQAAAAEAAcAAAAAAAQAAAAEAAYAAAABAAUAAAAEAAUAAAACAAQAAAAEAAQAAAACAAUAAAAEAAMAAAABAAQAAAAEAAIAAAACAAQAAAAEAAEAAAAAAAMAAAAEAAAAAAAAAAMAAAAEAP//AAACAAUAAAADAAsAAAACAAMAAAADAAoAAAACAAQAAAADAAkAAAACAAUAAAADAAgAAAACAAUAAAADAAcAAAAAAAQAAAADAAYAAAAAAAQAAAADAAUAAAACAAUAAAADAAQAAAACAAUAAAADAAMAAAABAAUAAAADAAIAAAACAAMAAAADAAEAAAACAAQAAAADAAAAAAAAAAUAAAADAP//AAACAAMAAAACAAsAAAAAAAUAAAACAAoAAAAAAAQAAAACAAkAAAACAAMAAAACAAgAAAACAAMAAAACAAcAAAABAAMAAAACAAYAAAABAAUAAAACAAUAAAACAAUAAAACAAQAAAACAAMAAAACAAMAAAABAAMAAAACAAIAAAABAAQAAAACAAEAAAAAAAQAAAACAAAAAAAAAAUAAAACAP//AAAAAAUAAAABAAsAAAABAAUAAAABAAoAAAACAAUAAAABAAkAAAAAAAUAAAABAAgAAAACAAUAAAABAAcAAAABAAUAAAABAAYAAAABAAQAAAABAAUAAAAAAAMAAAABAAQAAAABAAUAAAABAAMAAAACAAUAAAABAAIAAAACAAUAAAABAAEAAAACAAUAAAABAAAAAAABAAUAAAABAP//AAABAAQAAAAAAAsAAAABAAQAAAAAAAoAAAABAAQAAAAAAAkAAAABAAMAAAAAAAgAAAABAAQAAAAAAAcAAAAAAAMAAAAAAAYAAAAAAAQAAAAAAAUAAAAAAAUAAAAAAAQAAAACAAUAAAAAAAMAAAACAAUAAAAAAAIAAAAAAAUAAAAAAAEAAAABAAUAAAAAAAAAAAACAAUAAAAAAP//AAAAAAUAAAD//wsAAAABAAMAAAD//woAAAACAAQAAAD//wkAAAACAAUAAAD//wgAAAACAAUAAAD//wcAAAAAAAQAAAD//wYAAAAAAAUAAAD//wUAAAAAAAUAAAD//wQAAAAAAAMAAAD//wMAAAABAAUAAAD//wIAAAAAAAUAAAD//wEAAAACAAMAAAD//wAAAAAAAAUAAAD/////AAABAAUAAAA=")
tile_set = ExtResource("8_nnetg")

[node name="result_text" type="RichTextLabel" parent="ResultScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 25)
layout_mode = 0
offset_top = 15.0
offset_right = 320.0
offset_bottom = 40.0
theme = ExtResource("6_cmtl1")
bbcode_enabled = true
text = "[center]Level Complete[/center]"
scroll_active = false

[node name="continue" type="Button" parent="ResultScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 247.0
offset_top = 146.0
offset_right = 298.0
offset_bottom = 168.0
theme = ExtResource("6_cmtl1")
text = "Continue"

[node name="restart" type="Button" parent="ResultScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 177.0
offset_top = 146.0
offset_right = 244.0
offset_bottom = 168.0
theme = ExtResource("6_cmtl1")
text = "Restart Level"

[node name="exit" type="Button" parent="ResultScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 113.0
offset_top = 146.0
offset_right = 172.0
offset_bottom = 168.0
theme = ExtResource("6_cmtl1")
text = "Main Menu"

[node name="level_time_label" type="RichTextLabel" parent="ResultScreen"]
custom_minimum_size = Vector2(60, 15)
layout_mode = 0
offset_left = 59.0
offset_top = 65.0
offset_right = 159.0
offset_bottom = 80.0
theme = ExtResource("6_cmtl1")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[right]Level time:[/right]"
scroll_active = false

[node name="level_time" type="RichTextLabel" parent="ResultScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 15)
layout_mode = 0
offset_left = 179.0
offset_top = 65.0
offset_right = 239.0
offset_bottom = 80.0
theme = ExtResource("6_cmtl1")
theme_override_font_sizes/normal_font_size = 10
text = "00:00.00"

[node name="total_timer_label" type="RichTextLabel" parent="ResultScreen"]
custom_minimum_size = Vector2(100, 15)
layout_mode = 0
offset_left = 59.0
offset_top = 85.0
offset_right = 159.0
offset_bottom = 100.0
theme = ExtResource("6_cmtl1")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[right]Total time:[/right]"
scroll_active = false

[node name="total_time" type="RichTextLabel" parent="ResultScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 15)
layout_mode = 0
offset_left = 179.0
offset_top = 85.0
offset_right = 239.0
offset_bottom = 100.0
theme = ExtResource("6_cmtl1")
theme_override_font_sizes/normal_font_size = 10
text = "00:00.00"

[node name="LoadingScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_6cnba")
id = "loading_screen"

[node name="background" type="TileMapLayer" parent="LoadingScreen"]
tile_map_data = PackedByteArray("AAAUAAsAAAAFAAUAAAAUAAoAAAAFAAUAAAAUAAkAAAAFAAQAAAAUAAgAAAAFAAMAAAAUAAcAAAAFAAQAAAAUAAYAAAADAAMAAAAUAAUAAAAEAAQAAAAUAAQAAAAFAAUAAAAUAAMAAAAEAAMAAAAUAAIAAAAEAAMAAAAUAAEAAAAEAAUAAAAUAAAAAAADAAUAAAAUAP//AAAEAAUAAAATAAsAAAADAAUAAAATAAoAAAAEAAMAAAATAAkAAAAFAAQAAAATAAgAAAAEAAMAAAATAAcAAAADAAUAAAATAAYAAAADAAMAAAATAAUAAAAFAAQAAAATAAQAAAAFAAMAAAATAAMAAAAEAAUAAAATAAIAAAADAAMAAAATAAEAAAAFAAQAAAATAAAAAAAFAAUAAAATAP//AAAEAAMAAAASAAsAAAAFAAUAAAASAAoAAAAEAAQAAAASAAkAAAAFAAQAAAASAAgAAAAFAAQAAAASAAcAAAAFAAUAAAASAAYAAAADAAUAAAASAAUAAAAEAAUAAAASAAQAAAAEAAMAAAASAAMAAAAFAAQAAAASAAIAAAADAAUAAAASAAEAAAADAAUAAAASAAAAAAAFAAQAAAASAP//AAAEAAUAAAARAAsAAAAFAAMAAAARAAoAAAAEAAMAAAARAAkAAAADAAMAAAARAAgAAAAEAAMAAAARAAcAAAADAAMAAAARAAYAAAAFAAMAAAARAAUAAAAEAAMAAAARAAQAAAADAAQAAAARAAMAAAAEAAMAAAARAAIAAAAEAAMAAAARAAEAAAAFAAUAAAARAAAAAAAFAAQAAAARAP//AAAFAAUAAAAQAAsAAAAFAAMAAAAQAAoAAAAEAAUAAAAQAAkAAAADAAQAAAAQAAgAAAADAAUAAAAQAAcAAAAEAAMAAAAQAAYAAAADAAQAAAAQAAUAAAAEAAQAAAAQAAQAAAAEAAQAAAAQAAMAAAAEAAUAAAAQAAIAAAADAAQAAAAQAAEAAAAEAAQAAAAQAAAAAAAFAAQAAAAQAP//AAAEAAUAAAAPAAsAAAAEAAQAAAAPAAoAAAADAAMAAAAPAAkAAAAEAAUAAAAPAAgAAAAEAAUAAAAPAAcAAAADAAMAAAAPAAYAAAADAAMAAAAPAAUAAAADAAMAAAAPAAQAAAADAAUAAAAPAAMAAAADAAQAAAAPAAIAAAAEAAMAAAAPAAEAAAAFAAQAAAAPAAAAAAAFAAMAAAAPAP//AAAFAAQAAAAOAAsAAAAFAAUAAAAOAAoAAAADAAUAAAAOAAkAAAAFAAUAAAAOAAgAAAAFAAMAAAAOAAcAAAAFAAMAAAAOAAYAAAAFAAUAAAAOAAUAAAADAAMAAAAOAAQAAAAFAAMAAAAOAAMAAAAEAAMAAAAOAAIAAAADAAUAAAAOAAEAAAAEAAQAAAAOAAAAAAAFAAMAAAAOAP//AAAFAAQAAAANAAsAAAAFAAMAAAANAAoAAAAEAAUAAAANAAkAAAAEAAMAAAANAAgAAAAEAAQAAAANAAcAAAADAAUAAAANAAYAAAAFAAUAAAANAAUAAAAFAAQAAAANAAQAAAAFAAMAAAANAAMAAAADAAUAAAANAAIAAAAEAAMAAAANAAEAAAAFAAUAAAANAAAAAAADAAMAAAANAP//AAAEAAMAAAAMAAsAAAAEAAMAAAAMAAoAAAAEAAUAAAAMAAkAAAADAAUAAAAMAAgAAAAEAAUAAAAMAAcAAAADAAUAAAAMAAYAAAAFAAUAAAAMAAUAAAAEAAUAAAAMAAQAAAADAAMAAAAMAAMAAAAEAAMAAAAMAAIAAAADAAMAAAAMAAEAAAAEAAUAAAAMAAAAAAAFAAUAAAAMAP//AAAFAAUAAAALAAsAAAAFAAMAAAALAAoAAAAEAAQAAAALAAkAAAADAAMAAAALAAgAAAAEAAQAAAALAAcAAAAEAAUAAAALAAYAAAAFAAUAAAALAAUAAAADAAQAAAALAAQAAAADAAQAAAALAAMAAAADAAUAAAALAAIAAAADAAUAAAALAAEAAAAEAAQAAAALAAAAAAAEAAUAAAALAP//AAADAAUAAAAKAAsAAAAFAAMAAAAKAAoAAAAEAAUAAAAKAAkAAAAFAAQAAAAKAAgAAAAEAAUAAAAKAAcAAAAEAAUAAAAKAAYAAAADAAUAAAAKAAUAAAADAAMAAAAKAAQAAAADAAQAAAAKAAMAAAADAAUAAAAKAAIAAAAFAAQAAAAKAAEAAAAEAAUAAAAKAAAAAAADAAUAAAAKAP//AAAEAAMAAAAJAAsAAAADAAMAAAAJAAoAAAAFAAQAAAAJAAkAAAAFAAMAAAAJAAgAAAADAAQAAAAJAAcAAAADAAUAAAAJAAYAAAADAAQAAAAJAAUAAAAEAAUAAAAJAAQAAAAFAAMAAAAJAAMAAAAFAAUAAAAJAAIAAAADAAUAAAAJAAEAAAAFAAUAAAAJAAAAAAAEAAUAAAAJAP//AAADAAMAAAAIAAsAAAADAAQAAAAIAAoAAAAFAAUAAAAIAAkAAAADAAUAAAAIAAgAAAADAAQAAAAIAAcAAAADAAUAAAAIAAYAAAADAAMAAAAIAAUAAAADAAUAAAAIAAQAAAAFAAMAAAAIAAMAAAAFAAQAAAAIAAIAAAAFAAMAAAAIAAEAAAAFAAUAAAAIAAAAAAADAAUAAAAIAP//AAAFAAMAAAAHAAsAAAAFAAMAAAAHAAoAAAAFAAUAAAAHAAkAAAAFAAMAAAAHAAgAAAAFAAQAAAAHAAcAAAAFAAMAAAAHAAYAAAAEAAUAAAAHAAUAAAAFAAUAAAAHAAQAAAAEAAQAAAAHAAMAAAAFAAMAAAAHAAIAAAAEAAMAAAAHAAEAAAADAAQAAAAHAAAAAAAFAAUAAAAHAP//AAAEAAMAAAAGAAsAAAAEAAQAAAAGAAoAAAAEAAMAAAAGAAkAAAAFAAUAAAAGAAgAAAAEAAUAAAAGAAcAAAADAAQAAAAGAAYAAAAFAAUAAAAGAAUAAAAEAAQAAAAGAAQAAAAFAAMAAAAGAAMAAAAFAAQAAAAGAAIAAAADAAMAAAAGAAEAAAAEAAQAAAAGAAAAAAADAAUAAAAGAP//AAADAAQAAAAFAAsAAAADAAMAAAAFAAoAAAAEAAUAAAAFAAkAAAAFAAUAAAAFAAgAAAADAAUAAAAFAAcAAAAEAAQAAAAFAAYAAAADAAUAAAAFAAUAAAAEAAQAAAAFAAQAAAAEAAQAAAAFAAMAAAADAAQAAAAFAAIAAAAFAAQAAAAFAAEAAAADAAMAAAAFAAAAAAAEAAQAAAAFAP//AAAFAAUAAAAEAAsAAAAFAAMAAAAEAAoAAAADAAQAAAAEAAkAAAAFAAMAAAAEAAgAAAADAAUAAAAEAAcAAAADAAQAAAAEAAYAAAAFAAUAAAAEAAUAAAAFAAMAAAAEAAQAAAADAAUAAAAEAAMAAAADAAQAAAAEAAIAAAADAAQAAAAEAAEAAAADAAUAAAAEAAAAAAAEAAUAAAAEAP//AAAFAAUAAAADAAsAAAADAAUAAAADAAoAAAADAAQAAAADAAkAAAADAAQAAAADAAgAAAAEAAMAAAADAAcAAAAEAAQAAAADAAYAAAAFAAUAAAADAAUAAAAEAAMAAAADAAQAAAAEAAQAAAADAAMAAAAFAAMAAAADAAIAAAAFAAUAAAADAAEAAAADAAMAAAADAAAAAAAEAAUAAAADAP//AAADAAUAAAACAAsAAAAFAAUAAAACAAoAAAADAAUAAAACAAkAAAADAAMAAAACAAgAAAAEAAMAAAACAAcAAAADAAUAAAACAAYAAAAEAAMAAAACAAUAAAAFAAQAAAACAAQAAAADAAUAAAACAAMAAAADAAUAAAACAAIAAAAEAAQAAAACAAEAAAAFAAUAAAACAAAAAAAEAAUAAAACAP//AAAFAAUAAAABAAsAAAADAAUAAAABAAoAAAADAAMAAAABAAkAAAAEAAUAAAABAAgAAAADAAQAAAABAAcAAAAFAAQAAAABAAYAAAAFAAQAAAABAAUAAAAFAAQAAAABAAQAAAAEAAQAAAABAAMAAAAEAAUAAAABAAIAAAAFAAUAAAABAAEAAAAEAAUAAAABAAAAAAAFAAMAAAABAP//AAAFAAUAAAAAAAsAAAADAAUAAAAAAAoAAAADAAQAAAAAAAkAAAAFAAQAAAAAAAgAAAAFAAQAAAAAAAcAAAAFAAMAAAAAAAYAAAAFAAUAAAAAAAUAAAAFAAMAAAAAAAQAAAAEAAUAAAAAAAMAAAAEAAMAAAAAAAIAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAAAAAADAAMAAAAAAP//AAAEAAUAAAD//wsAAAAFAAMAAAD//woAAAAFAAQAAAD//wkAAAADAAQAAAD//wgAAAAEAAMAAAD//wcAAAAEAAUAAAD//wYAAAAEAAQAAAD//wUAAAAEAAMAAAD//wQAAAADAAQAAAD//wMAAAADAAQAAAD//wIAAAAFAAUAAAD//wEAAAADAAQAAAD//wAAAAAFAAMAAAD/////AAAFAAQAAAA=")
tile_set = ExtResource("8_nnetg")

[node name="loading_text" type="RichTextLabel" parent="LoadingScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 25)
layout_mode = 0
offset_left = 165.0
offset_top = 130.0
offset_right = 240.0
offset_bottom = 155.0
theme = ExtResource("6_cmtl1")
text = "Loading"
scroll_active = false

[node name="LoadingTire" parent="LoadingScreen" instance=ExtResource("9_4x14f")]
position = Vector2(261, 143)
